# imu-klt-tracker

./: CMakeCache.txt  CMakeLists.txt  FindOpenCV.cmake  Makefile  README.md  cmake_install.cmake
data/: aerial_camera_param.txt  aerial_imu_shape.txt  desk_camera_param.txt  desk_imu_shape.txt
data/aerial_img/: Thumbs.db
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  display_tracker.cxx  featurePool.cxx  featurePool.h  featureTrack.cxx  featureTrack.h  imageAlign.cxx  imageAlign.h  main_tracker.cxx  playback_tracker.cxx  playback_tracker.h
